almost good enough: - some troubles with experiment flow (sometimes goes haywire) - need more precise timing ctrl