@@ -10,16 +10,57 @@ import ru.nsu.alife.fs.PredicateSet;
 
 public class Mover{
 
-  // Turn turn;
+  // ProcessBuilder st_l;
+  // ProcessBuilder st_r;
+  // ProcessBuilder fw_l;
+  // ProcessBuilder fw_r;
+  // ProcessBuilder bk_l;
+  // ProcessBuilder bk_r;
+  // ProcessBuilder lf_l;
+  // ProcessBuilder lf_r;
+  // ProcessBuilder rt_l;
+  // ProcessBuilder rt_r;
+  //
+  // // public final IAction stop, moveAhead, moveBack, turnRight, turnLeft;
+  //
+  // void Mover(){
+  //   ProcessBuilder st_l = new ProcessBuilder("gz", "joint", "-m",
+  //   "eater", "-j", "left_wheel_hinge", "--vel-t", "0");
+  //   ProcessBuilder st_r = new ProcessBuilder("gz", "joint", "-m",
+  //   "eater", "-j", "right_wheel_hinge", "--vel-t", "0");
+  //   ProcessBuilder fw_l = new ProcessBuilder("gz", "joint", "-m",
+  //   "eater", "-j", "left_wheel_hinge", "--vel-t", "9");
+  //   ProcessBuilder fw_r = new ProcessBuilder("gz", "joint", "-m",
+  //   "eater", "-j", "right_wheel_hinge", "--vel-t", "9");
+  //   ProcessBuilder bk_l = new ProcessBuilder("gz", "joint", "-m",
+  //   "eater", "-j", "left_wheel_hinge", "--vel-t", "-3");
+  //   ProcessBuilder bk_r = new ProcessBuilder("gz", "joint", "-m",
+  //   "eater", "-j", "right_wheel_hinge", "--vel-t", "-3");
+  //   ProcessBuilder lf_l = new ProcessBuilder("gz", "joint", "-m",
+  //   "eater", "-j", "left_wheel_hinge", "--vel-t", "-3");
+  //   ProcessBuilder lf_r = new ProcessBuilder("gz", "joint", "-m",
+  //   "eater", "-j", "right_wheel_hinge", "--vel-t", "3");
+  //   ProcessBuilder rt_l = new ProcessBuilder("gz", "joint", "-m",
+  //   "eater", "-j", "left_wheel_hinge", "--vel-t", "3");
+  //   ProcessBuilder rt_r = new ProcessBuilder("gz", "joint", "-m",
+  //   "eater", "-j", "right_wheel_hinge", "--vel-t", "-3");
+  // }
 
   public final IAction stop = new IAction(){
     @Override
     public boolean doAction(){
       try{
-        java.lang.Runtime.getRuntime().exec("gz joint -m " +
-          "eater -j left_wheel_hinge --vel-t 0");
-        java.lang.Runtime.getRuntime().exec("gz joint -m " +
-          "eater -j right_wheel_hinge --vel-t 0");
+        ProcessBuilder st_l = new ProcessBuilder("gz", "joint", "-m",
+        "eater", "-j", "left_wheel_hinge", "--vel-t", "0");
+        ProcessBuilder st_r = new ProcessBuilder("gz", "joint", "-m",
+        "eater", "-j", "right_wheel_hinge", "--vel-t", "0");
+        // java.lang.Runtime.getRuntime().exec("gz joint -m " +
+        //   "eater -j left_wheel_hinge --vel-t 0");
+        // java.lang.Runtime.getRuntime().exec("gz joint -m " +
+        //   "eater -j right_wheel_hinge --vel-t 0");
+        st_l.start();
+        st_r.start();
+
       }
       catch(IOException ex){}
 
@@ -27,14 +68,19 @@ public class Mover{
       return true;
     }
   };
+
   public final IAction moveAhead = new IAction(){
     @Override
     public boolean doAction(){
       try{
-        java.lang.Runtime.getRuntime().exec("gz joint -m " +
-          "eater -j left_wheel_hinge --vel-t 5");
-        java.lang.Runtime.getRuntime().exec("gz joint -m " +
-          "eater -j right_wheel_hinge --vel-t 5");
+        ProcessBuilder fw_l = new ProcessBuilder("gz", "joint", "-m",
+        "eater", "-j", "left_wheel_hinge", "--vel-t", "9");
+        ProcessBuilder fw_r = new ProcessBuilder("gz", "joint", "-m",
+        "eater", "-j", "right_wheel_hinge", "--vel-t", "9");
+        // java.lang.Runtime.getRuntime().exec("gz joint -m " +
+        //   "eater -j left_wheel_hinge --vel-t 5");
+        // java.lang.Runtime.getRuntime().exec("gz joint -m " +
+        //   "eater -j right_wheel_hinge --vel-t 5");
         // ProcessBuilder pbl = new ProcessBuilder("gz", "joint", "-m",
         //   "eater", "-j", "left_wheel_hinge", "--vel-t", "5");
         // ProcessBuilder pbr = new ProcessBuilder("gz", "joint", "-m",
@@ -42,6 +88,8 @@ public class Mover{
         //
         // pbl.start();
       	// pbr.start();
+        fw_l.start();
+        fw_r.start();
       }
       catch(IOException ex){}
 
@@ -50,15 +98,18 @@ public class Mover{
     }
   };
 
-
   public final IAction moveBack = new IAction(){
     @Override
     public boolean doAction(){
       try{
-        java.lang.Runtime.getRuntime().exec("gz joint -m " +
-          "eater -j left_wheel_hinge --vel-t -3");
-        java.lang.Runtime.getRuntime().exec("gz joint -m " +
-          "eater -j right_wheel_hinge --vel-t -3");
+        ProcessBuilder bk_l = new ProcessBuilder("gz", "joint", "-m",
+        "eater", "-j", "left_wheel_hinge", "--vel-t", "-3");
+        ProcessBuilder bk_r = new ProcessBuilder("gz", "joint", "-m",
+        "eater", "-j", "right_wheel_hinge", "--vel-t", "-3");
+        // java.lang.Runtime.getRuntime().exec("gz joint -m " +
+        //   "eater -j left_wheel_hinge --vel-t -3");
+        // java.lang.Runtime.getRuntime().exec("gz joint -m " +
+        //   "eater -j right_wheel_hinge --vel-t -3");
         // ProcessBuilder pbl = new ProcessBuilder("gz", "joint", "-m",
         //   "eater", "-j", "left_wheel_hinge", "--vel-t", "-3");
         // ProcessBuilder pbr = new ProcessBuilder("gz", "joint", "-m",
@@ -66,6 +117,8 @@ public class Mover{
         //
         // pbl.start();
       	// pbr.start();
+        bk_l.start();
+        bk_r.start();
       }
       catch(IOException ex){}
 
@@ -78,10 +131,16 @@ public class Mover{
     @Override
     public boolean doAction(){
       try{
-        java.lang.Runtime.getRuntime().exec("gz joint -m " +
-          "eater -j left_wheel_hinge --vel-t 4");
-        java.lang.Runtime.getRuntime().exec("gz joint -m " +
-          "eater -j right_wheel_hinge --vel-t -4");
+        ProcessBuilder rt_l = new ProcessBuilder("gz", "joint", "-m",
+        "eater", "-j", "left_wheel_hinge", "--vel-t", "3");
+        ProcessBuilder rt_r = new ProcessBuilder("gz", "joint", "-m",
+        "eater", "-j", "right_wheel_hinge", "--vel-t", "-3");
+        // java.lang.Runtime.getRuntime().exec("gz joint -m " +
+        //   "eater -j left_wheel_hinge --vel-t 3");
+        // java.lang.Runtime.getRuntime().exec("gz joint -m " +
+        //   "eater -j right_wheel_hinge --vel-t -3");
+        rt_l.start();
+        rt_r.start();
         }
       catch(IOException ex){}
       // catch(InterruptedException EX){}
@@ -95,10 +154,16 @@ public class Mover{
     @Override
     public boolean doAction(){
       try{
-        java.lang.Runtime.getRuntime().exec("gz joint -m " +
-          "eater -j left_wheel_hinge --vel-t -4");
-        java.lang.Runtime.getRuntime().exec("gz joint -m " +
-          "eater -j right_wheel_hinge --vel-t 4");
+        ProcessBuilder lf_l = new ProcessBuilder("gz", "joint", "-m",
+        "eater", "-j", "left_wheel_hinge", "--vel-t", "-3");
+        ProcessBuilder lf_r = new ProcessBuilder("gz", "joint", "-m",
+        "eater", "-j", "right_wheel_hinge", "--vel-t", "3");
+        // java.lang.Runtime.getRuntime().exec("gz joint -m " +
+        //   "eater -j left_wheel_hinge --vel-t -3");
+        // java.lang.Runtime.getRuntime().exec("gz joint -m " +
+        //   "eater -j right_wheel_hinge --vel-t 3");
+        lf_l.start();
+        lf_r.start();
         }
       catch(IOException ex){}
       // catch(InterruptedException EX){}
